Add initial HTML code

--- a/index.html
+++ b/index.html
@@ -20,9 +20,31 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <header>
-            <h1><span>What is</span>The Autism Spectrum?</h1>
-        </header>
+    <header>
+        <div>
+            <h1><span>What is </span>The Autism Spectrum?</h1>
+        </div>
+        <div>
+            <h2>What support services are available to people with a Autism Spectrum Disorder?</h2>
+            <ul>
+                <li>Occupational Therapy</li>
+                <li>Speech Pathology</li>
+                <li>Psychological Services</li>
+                <li>Group Programs</li>
+                <li>Assessments and Plans</li>
+                <li>Information and Support Services</li>
+            </ul>
+            <p>Further information and publications are available from <a href="autismsa.org.au">autismsa.org.au</a></p>
+        </div>
+        <div>
+            <h3>each person on the spectrum is unique and has both strengths and difficulties. helping someone with
+                autism begins with acceptance, knowledge and understanding the spectrum and the individual.</h3>
+        </div>
+    </header>
+
+    <main role="main">
+        <div><img src="images/girl-with-coloured-hands.jpg" alt="Girl showing hands with paint on them black and white"></div>
+    </main>
 
 </body>
 
